--- a/faculty.html
+++ b/faculty.html
@@ -88,7 +88,7 @@ div.WordSection1
 <div class=WordSection1>
 
 <p class=MsoNormal align=center style='text-align:center;line-height:normal'><img
-width=298 height=98 src="Facultymembers_files/image001.jpg"></p>
+width=298 height=98 src="FacMember/image001.jpg"></p>
 
 <p class=MsoNormal align=center style='text-align:center;line-height:normal'><b><span
 lang=KHM style='font-size:18.0pt;font-family:"Kh Muol";color:black'>គ្រូបង្រៀន
