--- a/training.html
+++ b/training.html
@@ -84,7 +84,7 @@ ul
 <div class=WordSection1>
 
 <p class=MsoNormal align=center style='text-align:center'><img width=298
-height=98 id="Picture 1" src="training_files/image001.jpg"></p>
+height=98 id="Picture 1" src="Train/image001.jpg"></p>
 
 <p class=MsoNormal align=center style='text-align:center'><b><span
 style='font-size:26.0pt;color:#006600'>Certificate Programs Training</span></b></p>
