--- a/video.html
+++ b/video.html
@@ -61,7 +61,7 @@
   <div class="video-class">
     <h1>🎬 Welcome to My Video</h1>
   <video width="700" height="650" controls>
-    <source src="video/cost.mp4" type="video/mp4">
+    <source src="Vid/cost.mp4" type="video/mp4">
   </video>
   </div>
   
