--- a/faculty.html
+++ b/faculty.html
@@ -141,7 +141,7 @@ lang=KHM style='font-size:18.0pt;font-family:"Kh Muol";color:black'>គ្រូ
   padding:0in 5.4pt 0in 5.4pt;height:18.8pt'>
   <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
   line-height:normal'><img width=45 height=47
-  src="Facultymembers_files/image002.jpg" alt="Teav Chhun Nan"></p>
+  src="FacMember/image002.jpg" alt="Teav Chhun Nan"></p>
   </td>
   <td width=255 valign=top style='width:191.25pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -175,7 +175,7 @@ lang=KHM style='font-size:18.0pt;font-family:"Kh Muol";color:black'>គ្រូ
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
   line-height:normal'><img width=43 height=47
-  src="Facultymembers_files/image003.jpg"></p>
+  src="FacMember/image003.jpg"></p>
   </td>
   <td width=255 valign=top style='width:191.25pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -209,7 +209,7 @@ lang=KHM style='font-size:18.0pt;font-family:"Kh Muol";color:black'>គ្រូ
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
   line-height:normal'><span lang=KHM style='font-size:12.0pt'><img width=50
-  height=54 src="Facultymembers_files/image004.png"></span></p>
+  height=54 src="FacMember/image004.png"></span></p>
   </td>
   <td width=255 valign=top style='width:191.25pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -243,7 +243,7 @@ lang=KHM style='font-size:18.0pt;font-family:"Kh Muol";color:black'>គ្រូ
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
   line-height:normal'><img width=52 height=61
-  src="Facultymembers_files/image005.jpg"></p>
+  src="FacMember/image005.jpg"></p>
   </td>
   <td width=255 valign=top style='width:191.25pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -277,7 +277,7 @@ lang=KHM style='font-size:18.0pt;font-family:"Kh Muol";color:black'>គ្រូ
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
   line-height:normal'><img width=56 height=68
-  src="Facultymembers_files/image006.jpg" alt="Chhay Buntha"></p>
+  src="FacMember/image006.jpg" alt="Chhay Buntha"></p>
   </td>
   <td width=255 valign=top style='width:191.25pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -377,7 +377,7 @@ lang=KHM style='font-size:18.0pt;font-family:"Kh Muol";color:black'>គ្រូ
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
   line-height:normal'><img width=58 height=66
-  src="Facultymembers_files/image007.jpg"></p>
+  src="FacMember/image007.jpg"></p>
   </td>
   <td width=255 valign=top style='width:191.25pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -411,7 +411,7 @@ lang=KHM style='font-size:18.0pt;font-family:"Kh Muol";color:black'>គ្រូ
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
   line-height:normal'><img width=53 height=59
-  src="Facultymembers_files/image008.jpg"></p>
+  src="FacMember/image008.jpg"></p>
   </td>
   <td width=255 valign=top style='width:191.25pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -444,7 +444,7 @@ lang=KHM style='font-size:18.0pt;font-family:"Kh Muol";color:black'>គ្រូ
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
   line-height:normal'><span style='font-size:12.0pt'><img width=55 height=65
-  id="Picture 4" src="Facultymembers_files/image009.jpg"></span></p>
+  id="Picture 4" src="FacMember/image009.jpg"></span></p>
   </td>
   <td width=255 valign=top style='width:191.25pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -478,7 +478,7 @@ lang=KHM style='font-size:18.0pt;font-family:"Kh Muol";color:black'>គ្រូ
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
   line-height:normal'><span style='font-size:12.0pt'><img width=56 height=55
-  id="Picture 6" src="Facultymembers_files/image010.jpg"></span></p>
+  id="Picture 6" src="FacMember/image010.jpg"></span></p>
   </td>
   <td width=255 valign=top style='width:191.25pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -549,7 +549,7 @@ lang=KHM style='font-size:18.0pt;font-family:"Kh Muol";color:black'>គ្រូ
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
   line-height:normal'><span style='font-size:12.0pt'><img width=55 height=49
-  id="Picture 7" src="Facultymembers_files/image011.jpg"></span></p>
+  id="Picture 7" src="FacMember/image011.jpg"></span></p>
   </td>
   <td width=255 valign=top style='width:191.25pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -585,7 +585,7 @@ lang=KHM style='font-size:18.0pt;font-family:"Kh Muol";color:black'>គ្រូ
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
   line-height:normal'><span style='font-size:12.0pt'><img width=56 height=57
-  id="Picture 5" src="Facultymembers_files/image012.jpg"></span></p>
+  id="Picture 5" src="FacMember/image012.jpg"></span></p>
   </td>
   <td width=255 valign=top style='width:191.25pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -619,7 +619,7 @@ lang=KHM style='font-size:18.0pt;font-family:"Kh Muol";color:black'>គ្រូ
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
   line-height:normal'><img width=54 height=57
-  src="Facultymembers_files/image013.jpg"></p>
+  src="FacMember/image013.jpg"></p>
   </td>
   <td width=255 valign=top style='width:191.25pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -655,7 +655,7 @@ lang=KHM style='font-size:18.0pt;font-family:"Kh Muol";color:black'>គ្រូ
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
   line-height:normal'><img width=48 height=54
-  src="Facultymembers_files/image014.jpg"></p>
+  src="FacMember/image014.jpg"></p>
   </td>
   <td width=255 valign=top style='width:191.25pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -691,7 +691,7 @@ lang=KHM style='font-size:18.0pt;font-family:"Kh Muol";color:black'>គ្រូ
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
   line-height:normal'><img width=50 height=56
-  src="Facultymembers_files/image015.jpg"></p>
+  src="FacMember/image015.jpg"></p>
   </td>
   <td width=255 valign=top style='width:191.25pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -727,7 +727,7 @@ lang=KHM style='font-size:18.0pt;font-family:"Kh Muol";color:black'>គ្រូ
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
   line-height:normal'><img width=50 height=58
-  src="Facultymembers_files/image016.jpg"></p>
+  src="FacMember/image016.jpg"></p>
   </td>
   <td width=255 valign=top style='width:191.25pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -829,7 +829,7 @@ lang=KHM style='font-size:18.0pt;font-family:"Kh Muol";color:black'>គ្រូ
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
   line-height:normal'><img width=50 height=53
-  src="Facultymembers_files/image017.jpg"></p>
+  src="FacMember/image017.jpg"></p>
   </td>
   <td width=255 valign=top style='width:191.25pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -864,7 +864,7 @@ lang=KHM style='font-size:18.0pt;font-family:"Kh Muol";color:black'>គ្រូ
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
   line-height:normal'><span style='font-size:12.0pt'><img width=54 height=69
-  id="Picture 8" src="Facultymembers_files/image018.jpg"></span></p>
+  id="Picture 8" src="FacMember/image018.jpg"></span></p>
   </td>
   <td width=255 valign=top style='width:191.25pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -934,7 +934,7 @@ lang=KHM style='font-size:18.0pt;font-family:"Kh Muol";color:black'>គ្រូ
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
   line-height:normal'><span style='font-size:12.0pt'><img width=52 height=66
-  id="Picture 9" src="Facultymembers_files/image019.jpg"></span></p>
+  id="Picture 9" src="FacMember/image019.jpg"></span></p>
   </td>
   <td width=255 valign=top style='width:191.25pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -967,7 +967,7 @@ lang=KHM style='font-size:18.0pt;font-family:"Kh Muol";color:black'>គ្រូ
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
   line-height:normal'><img width=54 height=65
-  src="Facultymembers_files/image020.jpg"></p>
+  src="FacMember/image020.jpg"></p>
   </td>
   <td width=255 valign=top style='width:191.25pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -1001,7 +1001,7 @@ lang=KHM style='font-size:18.0pt;font-family:"Kh Muol";color:black'>គ្រូ
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
   line-height:normal'><img width=50 height=57 id="Picture 2"
-  src="Facultymembers_files/image021.jpg" alt="Sreang Kosal"></p>
+  src="FacMember/image021.jpg" alt="Sreang Kosal"></p>
   </td>
   <td width=255 valign=top style='width:191.25pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -1034,7 +1034,7 @@ lang=KHM style='font-size:18.0pt;font-family:"Kh Muol";color:black'>គ្រូ
   padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
   line-height:normal'><img width=58 height=61 id="Picture 1"
-  src="Facultymembers_files/image022.jpg"></p>
+  src="FacMember/image022.jpg"></p>
   </td>
   <td width=255 valign=top style='width:191.25pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
